# mail_c_v3

./: README.md  main.py  pyproject.toml  sample_emails.json
src/: nodes.py  reac.py  state.py  tools.py
